force-app/main/default/objects/Document_Requested__c.object
<CustomObject>
    <fields>
        <fullName>Additional_Documents__c</fullName>
        <inlineHelpText>Enter each additional document on a new line</inlineHelpText>
        <label>Additional Documents</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Applicant_Email_address__c</fullName>
        <label>Applicant Email address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Applicant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Applicant</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Documents_Requested</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Application_Course_Preference__c</fullName>
        <label>Application Course Preference</label>
        <referenceTo>Application_Course_Preference__c</referenceTo>
        <relationshipName>Documents_Requested</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application</label>
        <referenceTo>Application__c</referenceTo>
        <relationshipName>Documents_Requested</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CaseSafeID__c</fullName>
        <description>18 Digit Salesforce ID</description>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>18 Digit Salesforce ID</inlineHelpText>
        <label>18 Digit ID - Document Request</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DR__c</fullName>
        <formula>IF(INCLUDES( Documents_Requested__c, &quot;ACCEPT-ADM&quot;), &quot;Course offer acceptance document&quot; + BR() , NULL) +
IF(INCLUDES( Documents_Requested__c, &quot;APTTESTRES&quot;), &quot;Results of aptitude test&quot; + BR() , NULL) +
IF(INCLUDES( Documents_Requested__c, &quot;CREDITAPPL&quot;), &quot;Credit application&quot; + BR() , NULL) +
IF(INCLUDES( Documents_Requested__c, &quot;CV_SUPPDOC&quot;), &quot;Resume/Curriculum vitae&quot; + BR() , NULL) +
IF(INCLUDES( Documents_Requested__c, &quot;DIPDEGCERT&quot;), &quot;Diploma or degree certificate&quot; + BR() , NULL) +
IF(INCLUDES( Documents_Requested__c, &quot;EMPREFRNCE&quot;), &quot;Employment reference&quot; + BR() , NULL) +
IF(INCLUDES( Documents_Requested__c, &quot;ENGMEDINST&quot;), &quot;Proof of English language medium of instruction&quot; + BR() , NULL) +
IF(INCLUDES( Documents_Requested__c, &quot;FOLIO_ITEM&quot;), &quot;Image of artwork for art and design folio&quot; + BR() , NULL) +
IF(INCLUDES( Documents_Requested__c, &quot;GRD_DEG&quot;), &quot;Previous degrees - graduation&quot; + BR() , NULL) +
IF(INCLUDES( Documents_Requested__c, &quot;GRD_NAME&quot;), &quot;Official name change - graduation&quot; + BR() , NULL) +
IF(INCLUDES( Documents_Requested__c, &quot;HDR-APPL&quot;), &quot;HDR application summary&quot; + BR() , NULL) +
IF(INCLUDES( Documents_Requested__c, &quot;HDR-OFFER&quot;), &quot;HDR offer letter&quot; + BR() , NULL) +
IF(INCLUDES( Documents_Requested__c, &quot;IELTSTOEFL&quot;), &quot;Results of English language test&quot; + BR() , NULL) +
IF(INCLUDES( Documents_Requested__c, &quot;OTHERDCTYP&quot;), &quot;Other document type not listed&quot; + BR() , NULL) +
IF(INCLUDES( Documents_Requested__c, &quot;PARENT_GUARDIAN&quot;), &quot;Parental Consent&quot; + BR() , NULL) +
IF(INCLUDES( Documents_Requested__c, &quot;PORTFOLIO&quot;), &quot;Learning portfolio&quot; + BR() , NULL) +
IF(INCLUDES( Documents_Requested__c, &quot;PRFEMPLMNT&quot;), &quot;Proof of employment&quot; + BR() , NULL) +
IF(INCLUDES( Documents_Requested__c, &quot;PRFPROFREG&quot;), &quot;Proof of Professional Registration&quot; + BR() , NULL) +
IF(INCLUDES( Documents_Requested__c, &quot;PRF_ID&quot;), &quot;Proof of citizenship/residency or identity&quot; + BR() , NULL) +
IF(INCLUDES( Documents_Requested__c, &quot;PRF_NAME&quot;), &quot;Proof of change of name&quot; + BR() , NULL) +
IF(INCLUDES( Documents_Requested__c, &quot;SCHPREDRES&quot;), &quot;Results forecast from secondary school&quot; + BR() , NULL) +
IF(INCLUDES( Documents_Requested__c, &quot;SECSCH_RES&quot;), &quot;Results from secondary school&quot; + BR() , NULL) +
IF(INCLUDES( Documents_Requested__c, &quot;STMTOFPRPS&quot;), &quot;Statement of purpose&quot; + BR() , NULL) +
IF(INCLUDES( Documents_Requested__c, &quot;TERTED_TRA&quot;), &quot;Results from tertiary studies&quot; + BR() , NULL) +
IF(INCLUDES( Documents_Requested__c, &quot;UNITOUTLNE&quot;), &quot;Unit outline from tertiary studies&quot; + BR() , NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Document Requested</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Request_Status__c</fullName>
        <label>Document Request Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Requested</fullName>
                </value>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Documents_Requested__c</fullName>
        <label>Documents Request</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Document_Type</valueSetName>
        </valueSet>
    </fields>
    <label>Document Request</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>DR-{0000}</displayFormat>
        <label>Request Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Document Requests</pluralLabel>
    <recordTypes>
        <fullName>Draft</fullName>
        <active>true</active>
        <description>Use this category for all document requests</description>
        <label>Draft</label>
    </recordTypes>
    <recordTypes>
        <fullName>Requested</fullName>
        <active>true</active>
        <description>Do not use this category</description>
        <label>Requested</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Record_Type_is_Requested</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISNEW(), RecordType.Name = &apos;Requested&apos;)</errorConditionFormula>
        <errorMessage>To create a new document request you must start in &apos;Draft&apos; status on the previous page</errorMessage>
    </validationRules>
</CustomObject>